--- a/Rules-Complete/Rule CDN.yaml
+++ b/Rules-Complete/Rule CDN.yaml
@@ -75,316 +75,316 @@ rule-providers:
     interval: 86400
     path: ./Rules/Media/GlobalTV/ABC
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/ABC.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/ABC.yaml'
   Abema TV:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/Abema_TV
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/Abema%20TV.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Abema%20TV.yaml'
   Amazon:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/Amazon
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/Amazon.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Amazon.yaml'
   Apple:
     behavior: classical
     interval: 86400
     path: ./Rules/Apple
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Apple.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Apple.yaml'
   Apple News:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/Apple_News
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/Apple%20News.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Apple%20News.yaml'
   Apple TV:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/Apple_TV
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/Apple%20TV.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Apple%20TV.yaml'
   BBC iPlayer:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/BBC_iPlayer
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/BBC%20iPlayer.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/BBC%20iPlayer.yaml'
   Bahamut:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/HMTTV/Bahamut
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/HMTTV/Bahamut.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/HMTTV/Bahamut.yaml'
   Bilibili:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/AsianTV/Bilibili
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/AsianTV/Bilibili.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/Bilibili.yaml'
   DAZN:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/DAZN
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/DAZN.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/DAZN.yaml'
   Developer:
     behavior: classical
     interval: 86400
     path: ./Rules/Developer
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Developer.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Developer.yaml'
   Discovery Plus:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/Discovery_Plus
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/Discovery%20Plus.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Discovery%20Plus.yaml'
   Disney Plus:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/Disney_Plus
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/Disney%20Plus.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Disney%20Plus.yaml'
   Domestic:
     behavior: classical
     interval: 86400
     path: ./Rules/Domestic
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Domestic.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Domestic.yaml'
   encoreTVB:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/encoreTVB
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/encoreTVB.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/encoreTVB.yaml'
   EHantai:
     behavior: classical
     interval: 86400
     path: ./Rules/EHantai
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/EHantai.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/EHantai.yaml'
   Game:
     behavior: classical
     interval: 86400
     path: ./Rules/Game
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Game.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Game.yaml'
   Fox Now:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/Fox_Now
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/Fox%20Now.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Fox%20Now.yaml'
   Fox+:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/Fox+
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/Fox%2B.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Fox%2B.yaml'
   Google:
     behavior: classical
     interval: 86400
     path: ./Rules/Google
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Google.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Google.yaml'
   HBO:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/HBO
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/HBO.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/HBO.yaml'
   Hulu:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/Hulu
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/Hulu.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Hulu.yaml'
   JOOX:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/JOOX
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/JOOX.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/JOOX.yaml'
   Japonx:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/Japonx
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/Japonx.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Japonx.yaml'
   KKBOX:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/HMTTV/KKBOX
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/HMTTV/KKBOX.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/HMTTV/KKBOX.yaml'
   KKTV:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/HMTTV/KKTV
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/HMTTV/KKTV.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/HMTTV/KKTV.yaml'
   LAN:
     behavior: classical
     interval: 86400
     path: ./Rules/LAN
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/LAN.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/LAN.yaml'
   Letv:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/AsianTV/Letv
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/AsianTV/Letv.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/Letv.yaml'
   Line TV:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/Line_TV
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/Line%20TV.yaml'  
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Line%20TV.yaml'  
   Microsoft:
     behavior: classical
     interval: 86400
     path: ./Rules/Microsoft
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Microsoft.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Microsoft.yaml'
   Netease Music:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/AsianTV/Netease_Music
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/AsianTV/Netease%20Music.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/Netease%20Music.yaml'
   Netflix:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/Netflix
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/Netflix.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Netflix.yaml'
   Niconico:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/Niconico
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/Niconico.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Niconico.yaml'
   PBS:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/PBS
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/PBS.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/PBS.yaml'
   PROXY:
     behavior: classical
     interval: 86400
     path: ./Rules/Proxy
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Proxy.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Proxy.yaml'
   Pandora:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/Pandora
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/Pandora.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Pandora.yaml'
   PayPal:
     behavior: classical
     interval: 86400
     path: ./Rules/PayPal
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/PayPal.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/PayPal.yaml'
   Pornhub:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/Pornhub
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/Pornhub.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Pornhub.yaml'
   Reject:
     behavior: classical
     interval: 86400
     path: ./Rules/Reject
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Reject.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Reject.yaml'
   Scholar:
     behavior: classical
     interval: 86400
     path: ./Rules/Scholar
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Scholar.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Scholar.yaml'
   Soundcloud:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/Soundcloud
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/Soundcloud.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Soundcloud.yaml'
   Special:
     behavior: classical
     interval: 86400
     path: ./Rules/Special
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Special.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Special.yaml'
   Speedtest:
     behavior: classical
     interval: 86400
     path: ./Rules/Speedtest
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Speedtest.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Speedtest.yaml'
   Spotify:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/Spotify
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/Spotify.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Spotify.yaml'
   Telegram:
     behavior: classical
     interval: 86400
     path: ./Rules/Telegram
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Telegram.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Telegram.yaml'
   Tencent Video:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/AsianTV/Tencent_Video
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/AsianTV/Tencent%20Video.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/Tencent%20Video.yaml'
   Twitch:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/Twitch
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/Twitch.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Twitch.yaml'
   ViuTV:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/ViuTV
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/ViuTV.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/ViuTV.yaml'
   WeTV:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/AsianTV/WeTV
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/AsianTV/WeTV.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/WeTV.yaml'
   YouTube:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/YouTube
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/YouTube.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/YouTube.yaml'
   Youku:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/AsianTV/Youku
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/AsianTV/Youku.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/Youku.yaml'
   iQiyi:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/AsianTV/iQiyi
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/AsianTV/iQiyi.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/iQiyi.yaml'
   myTV SUPER:
     behavior: classical
     interval: 86400
     path: ./Rules/Media/GlobalTV/myTV_SUPER
     type: http
-    url: 'https://cdn.jsdelivr.net/gh/zzcabc/Rules@main/Rules-Complete/Provider/Media/GlobalTV/myTV%20SUPER.yaml'
+    url: 'https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/myTV%20SUPER.yaml'
