--- a/Rules-Complete/Provider/Proxy.yaml
+++ b/Rules-Complete/Provider/Proxy.yaml
@@ -1,4 +1,41 @@
-payload:  
+payload:
+  # 国外DNS
+  # Google DNS
+  - IP-CIDR,8.8.8.8/32,no-resolve
+  - IP-CIDR,8.8.4.4/32,no-resolve
+  - DOMAIN,dns.google
+  # IBM Quad9
+  - IP-CIDR,9.9.9.9/32,no-resolve
+  - IP-CIDR,149.112.112.112/32,no-resolve
+  - DOMAIN,dns.quad9.net
+  - DOMAIN,dns11.quad9.net
+  # OpenDNS
+  - IP-CIDR,208.67.222.222/32,no-resolve
+  - IP-CIDR,208.67.220.220/32,no-resolve
+  - DOMAIN,doh.opendns.com
+  - DOMAIN,doh.familyshield.opendns.com
+  # Level3 DNS
+  - IP-CIDR,4.2.2.1/32,no-resolve
+  - IP-CIDR,4.2.2.2/32,no-resolve
+  # Cloudflare DNS
+  - IP-CIDR,1.1.1.1/32,no-resolve
+  - IP-CIDR,1.0.0.1/32,no-resolve
+  - DOMAIN,cloudflare-dns.com
+  # AdGuard DNS
+  - IP-CIDR,94.140.14.14/32,no-resolve
+  - IP-CIDR,94.140.15.15/32,no-resolve
+  - IP-CIDR,94.140.14.15/32,no-resolve
+  - IP-CIDR,94.140.15.16/32,no-resolve
+  - DOMAIN,dns.adguard.com
+  - DOMAIN,dns-family.adguard.com
+  - DOMAIN,dns.adguard.com
+  - DOMAIN,dns-family.adguard.com
+  # DNS.SB
+  - IP-CIDR,185.222.222.222/32,no-resolve
+  - IP-CIDR,45.11.45.11/32,no-resolve
+  - DOMAIN,doh.dns.sb
+  - DOMAIN,doh.sb
+
   # > Line
   - DOMAIN-SUFFIX,lin.ee
   - DOMAIN-SUFFIX,line.me
