--- a/FakeIP-Config.yaml
+++ b/FakeIP-Config.yaml
@@ -118,6 +118,26 @@ dns:
     - https://dns.cfiec.net/dns-query
     - https://rubyfish.cn/dns-query
     - https://dns.rubyfish.cn/dns-quer
+      # ipv6的DNS
+    # - "[2400:3200::1]:53"
+    # - "[2400:3200:baba::1]:53"
+    # - https://2400:3200::1/dns-query
+    # - https://2400:3200:baba::1/dns-query
+    # - "[2402:4e00::]:53"
+    # - "[2400:da00::6666]:53"
+    # - "[2001:dc7:1000::1]:53"
+    # - "[240C::6666]:53"
+    # - "[240C::6644]:53"
+    # - tls://dns.ipv6dns.com
+    # - https://dns.ipv6dns.com/dns-query
+    # - "[2001:cc0:2fff:1::6666]:53"
+    # - "[2001:cc0:2fff:2::6]:53"
+    # - "[2001:da8::666]:53"
+    # - "[2001:da8:8000:1:202:120:2:101]:53"
+    # - "[2001:da8:202:10::36]:53"
+    # - "[2001:da8:202:10::37]:53"
+    # - "[2001:da8:208:10::6]:53"
+    # - "[2001:da8::666]:53"
   # 国外用下列DNS解析
   fallback:
     - tls://dns.google
@@ -141,6 +161,15 @@ dns:
     - https://public.dns.iij.jp/dns-query
     - https://doh-jp.blahdns.com/dns-query
     - https://dns64.dns.google/dns-query
+      # ipv6的DNS
+    # - https://[2001:4860:4860::64]/dns-query
+    # - https://[2001:4860:4860::6464]/dns-query
+    # - https://[2606:4700:4700::1111]/dns-query
+    # - https://[2606:4700:4700::1001]/dns-query
+    # - https://[2606:4700:4700::64]/dns-query
+    # - https://[2606:4700:4700::6464]/dns-query
+    # - https://dns.quad9.net/dns-query
+    # - https://dns11.quad9.net/dns-query
   # fake-ip仅有
   fake-ip-filter:
     - "*.lan"
