--- a/RedirHost-Config.yaml
+++ b/RedirHost-Config.yaml
@@ -263,7 +263,7 @@ dns:
     - "*.ffxiv.com"
   # fake-ip仅有
   fallback-filter:
-    geoip: false
+    geoip: true
     ipcidr:
       - 0.0.0.0/8
       - 10.0.0.0/8
