--- a/Mixin.yaml
+++ b/Mixin.yaml
@@ -171,7 +171,7 @@ mixin: # object
       - "*.finalfantasyxiv.com"
       - "*.ffxiv.com"
     fallback-filter:
-      geoip: false
+      geoip: true
       ipcidr:
         - 0.0.0.0/8
         - 10.0.0.0/8
