--- a/Rules-Complete/Provider/Telegram.yaml
+++ b/Rules-Complete/Provider/Telegram.yaml
@@ -1,7 +1,7 @@
 payload:
   # > Telegram
-  # - PROCESS-NAME,org.telegram.messenger
-  # - PROCESS-NAME,Telegram
+  - PROCESS-NAME,org.telegram.messenger
+  - PROCESS-NAME,Telegram
   - DOMAIN-KEYWORD,telegram
   - DOMAIN-SUFFIX,t.me
   - DOMAIN-SUFFIX,tdesktop.com
