--- a/Rules-Complete/Provider/Apple.yaml
+++ b/Rules-Complete/Provider/Apple.yaml
@@ -40,7 +40,7 @@ payload:
 
   # > Apple CDN
   - PROCESS-NAME,storedownloadd
-  # - PROCESS-NAME,com.apple.appstored*
+  - PROCESS-NAME,com.apple.appstored*
   - DOMAIN-SUFFIX,ls.apple.com
   - DOMAIN-SUFFIX,mzstatic.com
   - DOMAIN,aod.itunes.apple.com
