更新公共配置文件

--- a/RedirHost-Config.yaml
+++ b/RedirHost-Config.yaml
@@ -70,10 +70,10 @@ experimental:
 ipv6: false
 
 # 某些配置信息，部分功能仅适用于Premium内核
-# profile:
+profile:
   # 时候存储的的选择节点信息
   # 如果有不同的配置文件有相同的组名，节点名，也会同步选择
-  # store-selected: false
+  store-selected: true
 
   # 时候开启调试的API
   # 仅支持Premium内核
@@ -81,7 +81,7 @@ ipv6: false
 
   # 时候持久化fake-ip
   # 从 v1.8.0 或者 Premium 2021.11.08开始支持
-  # store-fake-ip: true
+  store-fake-ip: true
 
 # DNS服务器
 dns:
@@ -180,87 +180,88 @@ dns:
     - "*.test"
     - "*.local"
     - "*.home.arpa"
-    - "time.*.com"
-    - "time.*.gov"
-    - "time.*.edu.cn"
-    - "time.*.apple.com"
-    - "time1.*.com"
-    - "time2.*.com"
-    - "time3.*.com"
-    - "time4.*.com"
-    - "time5.*.com"
-    - "time6.*.com"
-    - "time7.*.com"
-    - "ntp.*.com"
-    - "ntp1.*.com"
-    - "ntp2.*.com"
-    - "ntp3.*.com"
-    - "ntp4.*.com"
-    - "ntp5.*.com"
-    - "ntp6.*.com"
-    - "ntp7.*.com"
+    - time.*.com
+    - time.*.gov
+    - time.*.edu.cn
+    - time.*.apple.com
+    - time1.*.com
+    - time2.*.com
+    - time3.*.com
+    - time4.*.com
+    - time5.*.com
+    - time6.*.com
+    - time7.*.com
+    - ntp.*.com
+    - ntp1.*.com
+    - ntp2.*.com
+    - ntp3.*.com
+    - ntp4.*.com
+    - ntp5.*.com
+    - ntp6.*.com
+    - ntp7.*.com
     - "*.time.edu.cn"
     - "*.ntp.org.cn"
     - "+.pool.ntp.org"
-    - "music.163.com"
+    - music.163.com
     - "*.music.163.com"
     - "*.126.net"
-    - "musicapi.taihe.com"
-    - "music.taihe.com"
-    - "songsearch.kugou.com"
-    - "trackercdn.kugou.com"
+    - musicapi.taihe.com
+    - music.taihe.com
+    - songsearch.kugou.com
+    - trackercdn.kugou.com
     - "*.kuwo.cn"
-    - "api-jooxtt.sanook.com"
-    - "api.joox.com"
-    - "joox.com"
-    - "y.qq.com"
+    - api-jooxtt.sanook.com
+    - api.joox.com
+    - joox.com
+    - y.qq.com
     - "*.y.qq.com"
-    - "streamoc.music.tc.qq.com"
-    - "mobileoc.music.tc.qq.com"
-    - "isure.stream.qqmusic.qq.com"
-    - "dl.stream.qqmusic.qq.com"
-    - "aqqmusic.tc.qq.com"
-    - "amobile.music.tc.qq.com"
+    - streamoc.music.tc.qq.com
+    - mobileoc.music.tc.qq.com
+    - isure.stream.qqmusic.qq.com
+    - dl.stream.qqmusic.qq.com
+    - aqqmusic.tc.qq.com
+    - amobile.music.tc.qq.com
     - "*.xiami.com"
     - "*.music.migu.cn"
-    - "music.migu.cn"
+    - music.migu.cn
     - "*.msftconnecttest.com"
     - "*.msftncsi.com"
-    - "msftconnecttest.com"
-    - "msftncsi.com"
-    - "localhost.ptlogin2.qq.com"
-    - "localhost.sec.qq.com"
+    - msftconnecttest.com
+    - msftncsi.com
+    - localhost.ptlogin2.qq.com
+    - localhost.sec.qq.com
     - "+.srv.nintendo.net"
     - "+.stun.playstation.net"
-    - "xbox.*.microsoft.com"
-    - "xnotify.xboxlive.com"
+    - xbox.*.microsoft.com
+    - xnotify.xboxlive.com
     - "+.battlenet.com.cn"
     - "+.wotgame.cn"
     - "+.wggames.cn"
     - "+.wowsgame.cn"
     - "+.wargaming.net"
-    - "proxy.golang.org"
-    - "stun.*.*"
-    - "stun.*.*.*"
+    - proxy.golang.org
+    - stun.*.*
+    - stun.*.*.*
     - "+.stun.*.*"
     - "+.stun.*.*.*"
     - "+.stun.*.*.*.*"
-    - "heartbeat.belkin.com"
+    - heartbeat.belkin.com
     - "*.linksys.com"
     - "*.linksyssmartwifi.com"
     - "*.router.asus.com"
-    - "mesu.apple.com"
-    - "swscan.apple.com"
-    - "swquery.apple.com"
-    - "swdownload.apple.com"
-    - "swcdn.apple.com"
-    - "swdist.apple.com"
-    - "lens.l.google.com"
-    - "stun.l.google.com"
+    - mesu.apple.com
+    - swscan.apple.com
+    - swquery.apple.com
+    - swdownload.apple.com
+    - swcdn.apple.com
+    - swdist.apple.com
+    - lens.l.google.com
+    - stun.l.google.com
     - "+.nflxvideo.net"
     - "*.square-enix.com"
     - "*.finalfantasyxiv.com"
     - "*.ffxiv.com"
+    - "+.*"
   # fake-ip仅有
   fallback-filter:
     geoip: true
