--- a/Mixin.yaml
+++ b/Mixin.yaml
@@ -8,6 +8,7 @@ mixin: # object
     ignore-resolve-fail: true
   profile:
     store-fake-ip: true
+    store-selected: true
   cfw-conn-break-strategy:
     proxy: all
     profile: true
@@ -42,7 +43,7 @@ mixin: # object
       - 114.114.114.114
       - 1.2.4.8
       - 8.8.8.8
-    enhanced-mode: fake-ip
+    enhanced-mode: redir-host
     use-hosts: true
     nameserver:
       - 101.6.6.6
@@ -89,87 +90,88 @@ mixin: # object
       - "*.test"
       - "*.local"
       - "*.home.arpa"
-      - "time.*.com"
-      - "time.*.gov"
-      - "time.*.edu.cn"
-      - "time.*.apple.com"
-      - "time1.*.com"
-      - "time2.*.com"
-      - "time3.*.com"
-      - "time4.*.com"
-      - "time5.*.com"
-      - "time6.*.com"
-      - "time7.*.com"
-      - "ntp.*.com"
-      - "ntp1.*.com"
-      - "ntp2.*.com"
-      - "ntp3.*.com"
-      - "ntp4.*.com"
-      - "ntp5.*.com"
-      - "ntp6.*.com"
-      - "ntp7.*.com"
+      - time.*.com
+      - time.*.gov
+      - time.*.edu.cn
+      - time.*.apple.com
+      - time1.*.com
+      - time2.*.com
+      - time3.*.com
+      - time4.*.com
+      - time5.*.com
+      - time6.*.com
+      - time7.*.com
+      - ntp.*.com
+      - ntp1.*.com
+      - ntp2.*.com
+      - ntp3.*.com
+      - ntp4.*.com
+      - ntp5.*.com
+      - ntp6.*.com
+      - ntp7.*.com
       - "*.time.edu.cn"
       - "*.ntp.org.cn"
       - "+.pool.ntp.org"
-      - "music.163.com"
+      - music.163.com
       - "*.music.163.com"
       - "*.126.net"
-      - "musicapi.taihe.com"
-      - "music.taihe.com"
-      - "songsearch.kugou.com"
-      - "trackercdn.kugou.com"
+      - musicapi.taihe.com
+      - music.taihe.com
+      - songsearch.kugou.com
+      - trackercdn.kugou.com
       - "*.kuwo.cn"
-      - "api-jooxtt.sanook.com"
-      - "api.joox.com"
-      - "joox.com"
-      - "y.qq.com"
+      - api-jooxtt.sanook.com
+      - api.joox.com
+      - joox.com
+      - y.qq.com
       - "*.y.qq.com"
-      - "streamoc.music.tc.qq.com"
-      - "mobileoc.music.tc.qq.com"
-      - "isure.stream.qqmusic.qq.com"
-      - "dl.stream.qqmusic.qq.com"
-      - "aqqmusic.tc.qq.com"
-      - "amobile.music.tc.qq.com"
+      - streamoc.music.tc.qq.com
+      - mobileoc.music.tc.qq.com
+      - isure.stream.qqmusic.qq.com
+      - dl.stream.qqmusic.qq.com
+      - aqqmusic.tc.qq.com
+      - amobile.music.tc.qq.com
       - "*.xiami.com"
       - "*.music.migu.cn"
-      - "music.migu.cn"
+      - music.migu.cn
       - "*.msftconnecttest.com"
       - "*.msftncsi.com"
-      - "msftconnecttest.com"
-      - "msftncsi.com"
-      - "localhost.ptlogin2.qq.com"
-      - "localhost.sec.qq.com"
+      - msftconnecttest.com
+      - msftncsi.com
+      - localhost.ptlogin2.qq.com
+      - localhost.sec.qq.com
       - "+.srv.nintendo.net"
       - "+.stun.playstation.net"
-      - "xbox.*.microsoft.com"
-      - "xnotify.xboxlive.com"
+      - xbox.*.microsoft.com
+      - xnotify.xboxlive.com
       - "+.battlenet.com.cn"
       - "+.wotgame.cn"
       - "+.wggames.cn"
       - "+.wowsgame.cn"
       - "+.wargaming.net"
-      - "proxy.golang.org"
-      - "stun.*.*"
-      - "stun.*.*.*"
+      - proxy.golang.org
+      - stun.*.*
+      - stun.*.*.*
       - "+.stun.*.*"
       - "+.stun.*.*.*"
       - "+.stun.*.*.*.*"
-      - "heartbeat.belkin.com"
+      - heartbeat.belkin.com
       - "*.linksys.com"
       - "*.linksyssmartwifi.com"
       - "*.router.asus.com"
-      - "mesu.apple.com"
-      - "swscan.apple.com"
-      - "swquery.apple.com"
-      - "swdownload.apple.com"
-      - "swcdn.apple.com"
-      - "swdist.apple.com"
-      - "lens.l.google.com"
-      - "stun.l.google.com"
+      - mesu.apple.com
+      - swscan.apple.com
+      - swquery.apple.com
+      - swdownload.apple.com
+      - swcdn.apple.com
+      - swdist.apple.com
+      - lens.l.google.com
+      - stun.l.google.com
       - "+.nflxvideo.net"
       - "*.square-enix.com"
       - "*.finalfantasyxiv.com"
       - "*.ffxiv.com"
+      - "+.*"
     fallback-filter:
       geoip: true
       ipcidr:
