--- a/config/GITHUB_Full_AdblockPlus.ini
+++ b/config/GITHUB_Full_AdblockPlus.ini
@@ -1,4 +1,4 @@
-[custom]0627
+[custom]
 ;不要随意改变关键字，否则会导致出错
 
 ; 规则组
@@ -19,7 +19,7 @@ ruleset=AsianTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/mai
 ruleset=AsianTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/AsianTV/WeTV.yaml,86400
 ruleset=AsianTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/AsianTV/Youku.yaml,86400
 ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/GlobalTV/ABC.yaml,86400
-ruleset=GlobalTV TV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/GlobalTV/Abema%20TV.yaml,86400
+ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/GlobalTV/Abema%20TV.yaml,86400
 ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/GlobalTV/Amazon.yaml,86400
 ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/GlobalTV/Apple%20News.yaml,86400
 ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/GlobalTV/Apple%20TV.yaml,86400
