--- a/config/MyRules.ini
+++ b/config/MyRules.ini
@@ -1,16 +1,16 @@
 [custom]
 ;不要随意改变关键字，否则会导致出错
-https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main
+
 ; 规则组
-ruleset=Reject,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Reject.yaml,86400
+ruleset=AdBlock,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Reject.yaml,86400
 ruleset=DIRECT,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Special.yaml,86400
 ruleset=DIRECT,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/LAN.yaml,86400
 ruleset=AppleAndMicrosoft,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Apple.yaml,86400
 ruleset=AppleAndMicrosoft,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Microsoft.yaml,86400
 ruleset=GameAndPayPal,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/PayPal.yaml,86400
 ruleset=GameAndPayPal,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Game.yaml,86400
-ruleset=Netflix,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Netflix.yaml,86400
-ruleset=Spotify,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Spotify.yaml,86400
+ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Netflix.yaml,86400
+ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Spotify.yaml,86400
 ruleset=AsianTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/Bilibili.yaml,86400
 ruleset=AsianTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/iQiyi.yam,86400
 ruleset=AsianTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/Letv.yaml,86400
@@ -44,7 +44,7 @@ ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/z
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Soundcloud.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Twitch.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/ViuTV.yaml,86400
-ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/YouTube.yaml,86400
+ruleset=YouTube,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/YouTube.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/HMTTV/Bahamut.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/HMTTV/KKBOX.yam,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/HMTTV/KKTV.yaml,86400
@@ -60,18 +60,53 @@ ruleset=Other,[]MATCH
 
 
 ; 规则组节点
-custom_proxy_group=Proxy`select`[]auto-test`.*
-custom_proxy_group=auto-test`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=Reject`select`[]REJECT`[]DIRECT`[]Proxy
-custom_proxy_group=Domestic`select`[]DIRECT`[]Proxy`.*
-custom_proxy_group=Other`select`[]Proxy`[]DIRECT`.*
-custom_proxy_group=AsianTV`select`[]DIRECT`[]Proxy`(HGC|HKBN|PCCW|HKT|深台|彰化|新北|台|HK|hk|tw|TW)
-custom_proxy_group=GlobalTV`select`[]Proxy`.*
-custom_proxy_group=Netflix`select`[]Proxy`.*
-custom_proxy_group=Spotify`select`[]Proxy`.*
-custom_proxy_group=AppleAndMicrosoft`select`[]DIRECT`[]Proxy`.*
-custom_proxy_group=GameAndPayPal`select`[]DIRECT`[]Proxy`.*
-custom_proxy_group=Speedtest`select`[]DIRECT`[]Proxy`.*
+custom_proxy_group=Proxy`select`[]IEPL-JP-select`[]IEPL-SG-select`[]JP-Detour-select`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`[]IEPL-US-select`[]LA-Detour-select`[]UK-select`[]DE-Detour-select`[]SG-Detour-select`[]Oz-Detour-select`.*
+custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT`[]Proxy
+custom_proxy_group=Domestic`select`[]DIRECT`[]Proxy
+custom_proxy_group=Others`select`[]Proxy`[]DIRECT
+custom_proxy_group=AsianTV`select`[]DIRECT`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`(HKT|HK|TW)
+custom_proxy_group=YouTube`select``[]GlobalTV`[]IEPL-JP-select`[]IEPL-SG-select`[]JP-Detour-select`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`[]IEPL-US-select`[]LA-Detour-select`[]UK-select`[]DE-Detour-select`[]SG-Detour-select`[]Oz-Detour-select
+custom_proxy_group=GlobalTV`select``[]Proxy`[]IEPL-JP-select`[]IEPL-SG-select`[]JP-Detour-select`[]TW-Detour-select`[]IEPL-HK-select`[]HKT-Detour-select`[]IEPL-US-select`[]LA-Detour-select`[]UK-select`[]DE-Detour-select`[]SG-Detour-select`[]Oz-Detour-select
+custom_proxy_group=AppleAndMicrosoft`select`[]DIRECT`[]Proxy
+custom_proxy_group=GameAndPayPal`select`[]DIRECT`[]Proxy
+custom_proxy_group=Speedtest`select`[]DIRECT`[]Proxy
+
+custom_proxy_group=IEPL-JP-select`select`[]IEPL-JP`(SZ-JP)
+custom_proxy_group=IEPL-JP`url-test`(SZ-JP)`http://www.gstatic.com/generate_204`300,,50
+
+custom_proxy_group=IEPL-SG-select`select`[]IEPL-SG`(SZ-SG)
+custom_proxy_group=IEPL-SG`url-test`(SZ-SG)`http://www.gstatic.com/generate_204`300,,50
+
+custom_proxy_group=JP-Detour-select`select`[]JP-Detour`(JP-Detour)
+custom_proxy_group=JP-Detour`url-test`(JP-Detour)`http://www.gstatic.com/generate_204`300,,50
+
+custom_proxy_group=TW-Detour-select`select`[]TW-Detour`(TW-Detour)
+custom_proxy_group=TW-Detour`url-test`(TW-Detour)`http://www.gstatic.com/generate_204`300,,50
+
+custom_proxy_group=IEPL-HK-select`select`[]IEPL-HK`(SZ-HK)
+custom_proxy_group=IEPL-HK`url-test`(SZ-HK)`http://www.gstatic.com/generate_204`300,,50
+
+custom_proxy_group=HKT-Detour-select`select`[]HKT-Detour`(HKT-Detour)
+custom_proxy_group=HKT-Detour`url-test`(HKT-Detour)`http://www.gstatic.com/generate_204`300,,50
+
+custom_proxy_group=IEPL-US-select`select`[]IEPL-US`(SZ-US)
+custom_proxy_group=IEPL-US`url-test`(SZ-US)`http://www.gstatic.com/generate_204`300,,50
+
+custom_proxy_group=LA-Detour-select`select`[]LA-Detour`(LA-Detour)
+custom_proxy_group=LA-Detour`url-test`(LA-Detour)`http://www.gstatic.com/generate_204`300,,50
+
+custom_proxy_group=UK-select`select`[]UK`(UK)
+custom_proxy_group=UK`url-test`(UK)`http://www.gstatic.com/generate_204`300,,50
+
+custom_proxy_group=DE-Detour-select`select`[]DE-Detour`(DE-Detour)
+custom_proxy_group=DE-Detour`url-test`(DE-Detour)`http://www.gstatic.com/generate_204`300,,50
+
+custom_proxy_group=SG-Detour-select`select`[]SG-Detour`(SG-Detour)
+custom_proxy_group=SG-Detour`url-test`(SG-Detour)`http://www.gstatic.com/generate_204`300,,50
+
+custom_proxy_group=Oz-Detour-select`select`[]Oz-Detour`(Oz-Detour)
+custom_proxy_group=Oz-Detour`url-test`(Oz-Detour)`http://www.gstatic.com/generate_204`300,,50
+
 enable_rule_generator=true
 overwrite_original_rules=true
 
