--- a/config/FAST_GITHUB_Full_No_AdblockPlus.ini
+++ b/config/FAST_GITHUB_Full_No_AdblockPlus.ini
@@ -11,7 +11,7 @@ ruleset=GameAndPayPal,clash-classic:https://endpoint.fastgit.org/https://github.
 ruleset=Netflix,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Netflix.yaml,86400
 ruleset=Spotify,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Spotify.yaml,86400
 ruleset=AsianTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/Bilibili.yaml,86400
-ruleset=AsianTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/iQiyi.yam,86400
+ruleset=AsianTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/iQiyi.yaml,86400
 ruleset=AsianTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/Letv.yaml,86400
 ruleset=AsianTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/Netease%20Music.yaml,86400
 ruleset=AsianTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/AsianTV/Tencent%20Video.yaml,86400
