--- a/config/FAST_GITHUB_Full_AdblockPlus.ini
+++ b/config/FAST_GITHUB_Full_AdblockPlus.ini
@@ -46,7 +46,7 @@ ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/z
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/ViuTV.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/YouTube.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/HMTTV/Bahamut.yaml,86400
-ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/HMTTV/KKBOX.yamll,86400
+ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/HMTTV/KKBOX.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/HMTTV/KKTV.yaml,86400
 ruleset=Proxy,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Developer.yaml,86400
 ruleset=Proxy,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/EHantai.yaml,86400
