--- a/config/MyRules.ini
+++ b/config/MyRules.ini
@@ -56,7 +56,7 @@ ruleset=Proxy,clash-classic:https://endpoint.fastgit.org/https://github.com/zzca
 ruleset=Speedtest,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Speedtest.yaml,86400
 ruleset=Domestic,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Domestic.yaml,86400
 ruleset=Domestic,[]GEOIP,CN
-ruleset=Other,[]MATCH
+ruleset=Others,[]MATCH
 
 
 ; 规则组节点
