--- a/config/MyRules.ini
+++ b/config/MyRules.ini
@@ -55,7 +55,7 @@ ruleset=Proxy,clash-classic:https://endpoint.fastgit.org/https://github.com/zzca
 ruleset=Proxy,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Telegram.yaml,86400
 ruleset=Speedtest,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Speedtest.yaml,86400
 ruleset=Domestic,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Domestic.yaml,86400
-ruleset=Domestic,[]GEOIP,CN
+ruleset=DIRECT,[]GEOIP,CN
 ruleset=Others,[]MATCH
 
 
