--- a/FakeIP-Config.yaml
+++ b/FakeIP-Config.yaml
@@ -97,27 +97,29 @@ dns:
   # 填入纯IP的DNS服务器
   default-nameserver:
     - 114.114.114.114
+    - 180.76.76.76
     - 1.2.4.8
     - 8.8.8.8
+    - 4.2.2.1
+    - 4.2.2.2
   # 模式fake-ip  or  redir-host
   enhanced-mode: fake-ip
   # 使用本地hosts文件
   use-hosts: true
   # 国内用下列DNS解析
   nameserver:
-    - 101.6.6.6
+    - tcp://114.114.114.114
     - tls://dns.alidns.com
-    - tls://doh.pub
-    - tls://dns.pub
+    - tls://dot.pub
     - tls://dot.360.cn
-    - tls://dns.cfiec.net
+    - https://223.5.5.5/dns-query
+    - https://223.6.6.6/dns-query
     - https://dns.alidns.com/dns-query
     - https://doh.pub/dns-query
-    - https://dns.pub/dns-query
     - https://doh.360.cn/dns-query
-    - https://dns.cfiec.net/dns-query
+    - https://sm2.doh.pub/dns-query
     - https://rubyfish.cn/dns-query
-    - https://dns.rubyfish.cn/dns-quer
+    - https://dns.rubyfish.cn/dns-query
       # ipv6的DNS
     # - "[2400:3200::1]:53"
     # - "[2400:3200:baba::1]:53"
@@ -141,26 +143,29 @@ dns:
   # 国外用下列DNS解析
   fallback:
     - tls://dns.google
+    - tls://dns.adguard.com
+    - tls://dns-family.adguard.com
+    - tls://dot.sb
     - tls://1dot1dot1dot1.cloudflare-dns.com
     - tls://one.one.one.one
-    - tls://dot.sb
     - https://dns.google/dns-query
     - https://dns.google/resolve
     - https://dns.quad9.net/dns-query
     - https://dns11.quad9.net/dns-query
     - https://doh.opendns.com/dns-query
     - https://doh.familyshield.opendns.com/dns-query
-    - https://cloudflare-dns.com/dns-query
     - https://1.1.1.1/dns-query
     - https://1.0.0.1/dns-query
+    - https://cloudflare-dns.com/dns-query
     - https://dns.adguard.com/dns-query
     - https://dns-family.adguard.com/dns-query
     - https://doh.dns.sb/dns-query
+    - https://doh.sb/dns-query
     - https://doh.cleanbrowsing.org/doh/family-filter/
-    - https://doh.powerdns.org
     - https://public.dns.iij.jp/dns-query
     - https://doh-jp.blahdns.com/dns-query
-    - https://dns64.dns.google/dns-query
+    - https://public.dns.iij.jp/dns-query
+    - https://doh-jp.blahdns.com/dns-query
       # ipv6的DNS
     # - https://[2001:4860:4860::64]/dns-query
     # - https://[2001:4860:4860::6464]/dns-query
@@ -265,6 +270,7 @@ dns:
   # fake-ip仅有
   fallback-filter:
     geoip: true
+    geoip-code: CN
     ipcidr:
       - 0.0.0.0/8
       - 10.0.0.0/8
