--- a/config/FAST_GITHUB_Full_AdblockPlus.ini
+++ b/config/FAST_GITHUB_Full_AdblockPlus.ini
@@ -1,8 +1,8 @@
 [custom]
 ;不要随意改变关键字，否则会导致出错
-https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main
+
 ; 规则组
-ruleset=Reject,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Reject.yaml,86400
+ruleset=AdBlock,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Reject.yaml,86400
 ruleset=DIRECT,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Special.yaml,86400
 ruleset=DIRECT,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/LAN.yaml,86400
 ruleset=AppleAndMicrosoft,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Apple.yaml,86400
@@ -44,7 +44,7 @@ ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/z
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Soundcloud.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/Twitch.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/ViuTV.yaml,86400
-ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/YouTube.yaml,86400
+ruleset=YouTube,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/GlobalTV/YouTube.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/HMTTV/Bahamut.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/HMTTV/KKBOX.yaml,86400
 ruleset=GlobalTV,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Media/HMTTV/KKTV.yaml,86400
@@ -56,22 +56,22 @@ ruleset=Proxy,clash-classic:https://endpoint.fastgit.org/https://github.com/zzca
 ruleset=Speedtest,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Speedtest.yaml,86400
 ruleset=Domestic,clash-classic:https://endpoint.fastgit.org/https://github.com/zzcabc/Rules/blob/main/Rules-Complete/Provider/Domestic.yaml,86400
 ruleset=Domestic,[]GEOIP,CN
-ruleset=Other,[]MATCH
+ruleset=Others,[]MATCH
 
 
 ; 规则组节点
-custom_proxy_group=Proxy`select`[]auto-test`.*
-custom_proxy_group=auto-test`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=Reject`select`[]REJECT`[]DIRECT`[]Proxy
-custom_proxy_group=Domestic`select`[]DIRECT`[]Proxy`.*
-custom_proxy_group=Other`select`[]Proxy`[]DIRECT`.*
-custom_proxy_group=AsianTV`select`[]DIRECT`[]Proxy`(HGC|HKBN|PCCW|HKT|深台|彰化|新北|台|HK|hk|tw|TW)
-custom_proxy_group=GlobalTV`select`[]Proxy`.*
-custom_proxy_group=Netflix`select`[]Proxy`.*
-custom_proxy_group=Spotify`select`[]Proxy`.*
-custom_proxy_group=AppleAndMicrosoft`select`[]DIRECT`[]Proxy`.*
-custom_proxy_group=GameAndPayPal`select`[]DIRECT`[]Proxy`.*
-custom_proxy_group=Speedtest`select`[]DIRECT`[]Proxy`.*
+custom_proxy_group=Proxy`select`.*
+custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT`[]Proxy
+custom_proxy_group=Domestic`select`[]DIRECT`[]Proxy
+custom_proxy_group=Others`select`[]Proxy`[]DIRECT
+custom_proxy_group=AsianTV`select`[]DIRECT`(HGC|HKBN|PCCW|HKT|深台|彰化|新北|台|HK|hk|tw|TW)
+custom_proxy_group=YouTube`select``[]GlobalTV.*
+custom_proxy_group=Netflix`select``[]GlobalTV.*
+custom_proxy_group=Spotify`select``[]GlobalTV.*
+custom_proxy_group=GlobalTV`select``[]Proxy`.*
+custom_proxy_group=AppleAndMicrosoft`select`[]DIRECT`[]Proxy
+custom_proxy_group=GameAndPayPal`select`[]DIRECT`[]Proxy
+custom_proxy_group=Speedtest`select`[]DIRECT`[]Proxy
 enable_rule_generator=true
 overwrite_original_rules=true
 
