--- a/config/GITHUB_Full_No_AdblockPlus.ini
+++ b/config/GITHUB_Full_No_AdblockPlus.ini
@@ -43,7 +43,7 @@ ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/ma
 ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/GlobalTV/Soundcloud.yaml,86400
 ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/GlobalTV/Twitch.yaml,86400
 ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/GlobalTV/ViuTV.yaml,86400
-ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/GlobalTV/YouTube.yaml,86400
+ruleset=YouTube,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/GlobalTV/YouTube.yaml,86400
 ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/HMTTV/Bahamut.yaml,86400
 ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/HMTTV/KKBOX.yaml,86400
 ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/HMTTV/KKTV.yaml,86400
@@ -55,22 +55,21 @@ ruleset=Proxy,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/
 ruleset=Speedtest,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Speedtest.yaml,86400
 ruleset=Domestic,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Domestic.yaml,86400
 ruleset=Domestic,[]GEOIP,CN
-ruleset=Other,[]MATCH
+ruleset=Others,[]MATCH
 
 
 ; 规则组节点
-custom_proxy_group=Proxy`select`[]auto-test`.*
-custom_proxy_group=auto-test`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=Reject`select`[]REJECT`[]DIRECT`[]Proxy
-custom_proxy_group=Domestic`select`[]DIRECT`[]Proxy`.*
-custom_proxy_group=Other`select`[]Proxy`[]DIRECT`.*
-custom_proxy_group=AsianTV`select`[]DIRECT`[]Proxy`(HGC|HKBN|PCCW|HKT|深台|彰化|新北|台|HK|hk|tw|TW)
-custom_proxy_group=GlobalTV`select`[]Proxy`.*
-custom_proxy_group=Netflix`select`[]Proxy`.*
-custom_proxy_group=Spotify`select`[]Proxy`.*
-custom_proxy_group=AppleAndMicrosoft`select`[]DIRECT`[]Proxy`.*
-custom_proxy_group=GameAndPayPal`select`[]DIRECT`[]Proxy`.*
-custom_proxy_group=Speedtest`select`[]DIRECT`[]Proxy`.*
+custom_proxy_group=Proxy`select`.*
+custom_proxy_group=Domestic`select`[]DIRECT`[]Proxy
+custom_proxy_group=Others`select`[]Proxy`[]DIRECT
+custom_proxy_group=AsianTV`select`[]DIRECT`(HGC|HKBN|PCCW|HKT|深台|彰化|新北|台|HK|hk|tw|TW)
+custom_proxy_group=YouTube`select``[]GlobalTV.*
+custom_proxy_group=Netflix`select``[]GlobalTV.*
+custom_proxy_group=Spotify`select``[]GlobalTV.*
+custom_proxy_group=GlobalTV`select``[]Proxy`.*
+custom_proxy_group=AppleAndMicrosoft`select`[]DIRECT`[]Proxy
+custom_proxy_group=GameAndPayPal`select`[]DIRECT`[]Proxy
+custom_proxy_group=Speedtest`select`[]DIRECT`[]Proxy
 enable_rule_generator=true
 overwrite_original_rules=true
 
