添加e站两个Androidapp，电脑TIM和Android qq，第三方哔咔pikapika

--- a/Rules-Complete/Provider/EHantai.yaml
+++ b/Rules-Complete/Provider/EHantai.yaml
@@ -7,3 +7,7 @@ payload:
   - DOMAIN-SUFFIX,exhentai.org
   - DOMAIN-SUFFIX,hath.network
   - DOMAIN-SUFFIX,hentaiverse.org
+  - PROCESS-NAME,com.honjow.fehviewer
+  - PROCESS-NAME,com.xjs.ehviewer
+  - PROCESS-NAME,fehviewer
+  - PROCESS-NAME,ehviewer
