--- a/config/GITHUB_Full_AdblockPlus.ini
+++ b/config/GITHUB_Full_AdblockPlus.ini
@@ -28,6 +28,7 @@ ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/ma
 ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/GlobalTV/Discovery%20Plus.yaml,86400
 ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/GlobalTV/Disney%20Plus.yaml,86400
 ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/GlobalTV/encoreTVB.yaml,86400
+ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/GlobalTV/F1%20TV.yaml,86400
 ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/GlobalTV/Fox%20Now.yaml,86400
 ruleset=GlobalTV,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Media/GlobalTV/Fox%2B.yaml,86400
 ruleset=Proxy,clash-classic:https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Complete/Provider/Google.yaml,86400
