同步Lhie1和ACL4SSR

--- a/Rules-Complete/Provider/Scholar.yaml
+++ b/Rules-Complete/Provider/Scholar.yaml
@@ -58,6 +58,7 @@ payload:
   - DOMAIN-SUFFIX,rsc.org
   - DOMAIN-SUFFIX,sagepub.com
   - DOMAIN-SUFFIX,sci-hub.tw
+  - DOMAIN-SUFFIX,science.org
   - DOMAIN-SUFFIX,sciencedirect.com
   - DOMAIN-SUFFIX,sciencemag.org
   - DOMAIN-SUFFIX,scitation.org
@@ -200,4 +201,3 @@ payload:
   - DOMAIN-SUFFIX,wanfangdata.com
   - DOMAIN-SUFFIX,westlawchina.com
   - DOMAIN-SUFFIX,yale.edu
-  
