--- a/Rules-Complete/Provider/Game.yaml
+++ b/Rules-Complete/Provider/Game.yaml
@@ -533,10 +533,9 @@ payload:
   - DOMAIN-SUFFIX,steamvideo-a.akamaihd.net
   - DOMAIN-SUFFIX,underlords.com
   - DOMAIN-SUFFIX,valvesoftware.com
-  - DOMAIN,csgo.wmsj.cn
+  - DOMAIN,cm.steampowered.com
   - DOMAIN,dl.steam.clngaa.com
   - DOMAIN,dl.steam.ksyna.com
-  - DOMAIN,dota2.wmsj.cn
   - DOMAIN,st.dl.bscstorage.net
   - DOMAIN,st.dl.eccdnx.com
   - DOMAIN,st.dl.pinyuncloud.com
