--- a/Rules-Complete/Provider/Media/AsianTV/Netease Music.yaml
+++ b/Rules-Complete/Provider/Media/AsianTV/Netease Music.yaml
@@ -15,7 +15,9 @@ payload:
   - IP-CIDR,112.13.122.1/32,no-resolve
   - IP-CIDR,112.13.122.4/32,no-resolve
   - IP-CIDR,115.236.118.33/32,no-resolve
+  - IP-CIDR,115.236.118.34/32,no-resolve
   - IP-CIDR,115.236.121.1/32,no-resolve
+  - IP-CIDR,115.236.121.4/32,no-resolve
   - IP-CIDR,118.24.63.156/32,no-resolve
   - IP-CIDR,182.92.170.253/32,no-resolve
   - IP-CIDR,193.112.159.225/32,no-resolve
@@ -32,5 +34,6 @@ payload:
   - IP-CIDR,59.111.181.35/32,no-resolve
   - IP-CIDR,59.111.181.38/32,no-resolve
   - IP-CIDR,59.111.181.60/32,no-resolve
+  - IP-CIDR,59.111.19.33/32,no-resolve
   - IP-CIDR,59.111.21.14/31,no-resolve
   - IP-CIDR,59.111.238.29/32,no-resolve
