--- a/Rules-Complete/Provider/Media/GlobalTV/Discovery Plus.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/Discovery Plus.yaml
@@ -4,6 +4,7 @@ payload:
   
   - DOMAIN-SUFFIX,content-ause1-ur-discovery1.uplynk.com
   - DOMAIN-SUFFIX,disco-api.com
+  - DOMAIN-SUFFIX,discovery.com
   - DOMAIN-SUFFIX,discoveryplus.com
   - DOMAIN-SUFFIX,fwmrm.net
   - DOMAIN-SUFFIX,getblueshift.com
