--- a/Rules-Complete/Provider/Domestic.yaml
+++ b/Rules-Complete/Provider/Domestic.yaml
@@ -191,6 +191,7 @@ payload:
   - DOMAIN-SUFFIX,jd.hk
   - DOMAIN-SUFFIX,jdcloud.com
   - DOMAIN-SUFFIX,jdpay.com
+  - DOMAIN-SUFFIX,jingxi.com
   - DOMAIN-SUFFIX,paipai.com
 
   # Kingsoft
